Update:輸入空格沒搜尋到資料，統一顯示預設五筆資料

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
@@ -164,6 +164,7 @@
 
                     //快速搜尋使用: 產品代號+空格+產品名稱，建議清單顯示最多5筆
                     lookup: function (query, done) {
+                        query = query?.trim();
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                         let result = [];
                         for (let i = 0; i < data.length; i++) {
