--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -14,6 +14,28 @@
     return;
 }
 
+@if (Model.NeedEmployeeCode)
+{
+    <section class="c-section c-section--locker" id="consultlistLocker">
+        <div class="c-calcLocker">
+            <div class="l-wrap">
+                <div class="c-calcLocker__icon">
+                    <img src="~/themes/images/icons/others/lock.svg" alt="">
+                </div>
+                <div class="c-calcLocker__desc t2 t-bold">需輸入八碼員編才能使用遠距理財諮詢功能</div>
+                <div class="c-calcLocker__desc" style="display: grid;justify-content: center;">
+                    <div class="l-form__input">
+                        <input id="input-employee" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入八碼員編">
+                    </div>
+                </div>
+                <div class="c-calcLocker__actions">
+                    <div class="c-calcLocker__btn"><a class="o-btn o-btn--primary o-btn--lg" id="send-employee">送出</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+}
+
 <div class="c-section" data-consultlist>
     <div class="c-section__content">
         <div class="c-tab c-tab--icon" data-tab="true" data-docking="false">
@@ -368,6 +390,30 @@
             <div class="l-action l-action--inline">
                 <div class="l-action__item">
                     <a href="#" class="o-btn o-btn--primary o-btn--sm" data-popup-close="true" data-cancel data-id="">確定取消</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="popupFail" class="c-modal c-modal--sm mfp-hide">
+    <div class="c-modal__wrap">
+        <header class="c-modal__header">
+            <h2 class="c-modal__title">送出失敗</h2>
+        </header>
+        <div class="c-modal__content">
+            <div class="l-flex u-flex-col u-flex-gap-min u-center">
+                <div class="l-flex__item">
+                    <img src="~/themes/images/icons/status/fail.svg" alt="">
+                </div>
+                <div class="l-flex__item" id="message">
+                </div>
+            </div>
+        </div>
+        <div class="c-modal__action">
+            <div class="l-action l-action--inline">
+                <div class="l-action__item">
+                    <a href="#" class="o-btn o-btn--primary o-btn--sm" data-popup-close="true">確定</a>
                 </div>
             </div>
         </div>
@@ -860,6 +906,57 @@
             e.preventDefault();
             var id = $(this).attr('data-id')
             cancelConsultSchedule(id);
+        });
+
+        function checkEmployee(){
+            window.loading('show');
+
+            var code = $('#input-employee').val();
+
+            var token = $('input[name="__RequestVerificationToken"]').val();
+
+            $.ajax({
+                url: '@ClientRoute.GenerateUrl(this, "Consult", "CheckEmployee")',
+                type: 'POST',
+                data: {code: code, __RequestVerificationToken : token }
+            }).done(function (data, textStatus, jqXHR) {
+                $.magnificPopup.close();
+                if (data.Success) {
+                    $('#consultlistLocker').removeClass('c-section--locker');
+                    $('#consultlistLocker').addClass('u-hidden');
+                }
+                else {
+                    if (data.Block) {
+                        window.VerifyLoginRedirctToHome(data.Success);
+                        return;
+                    }
+
+                    $('#message').text(data.Message);
+                    $.magnificPopup.open({
+                        items: {
+                            src: '#popupFail'
+                        },
+                        closeOnBgClick: false,
+                        callbacks: {
+                            afterClose: function () {
+                            }
+                        }
+                    });
+                }
+
+                if (data.ErrorMessage) {
+                    console.log(data.ErrorMessage);
+                }
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+            }).always(function () {
+                window.loading('hide');
+            });
+        }
+
+        $('#send-employee').on('click', function (e) {
+            e.preventDefault();
+
+            checkEmployee();
         });
 
         moment.locale('zh-tw', {
