--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -14,6 +14,28 @@
     return;
 }
 
+@if (Model.NeedEmployeeCode)
+{
+    <section class="c-section c-section--locker" id="consultlistLocker">
+        <div class="c-calcLocker">
+            <div class="l-wrap">
+                <div class="c-calcLocker__icon">
+                    <img src="~/themes/images/icons/others/lock.svg" alt="">
+                </div>
+                <div class="c-calcLocker__desc t2 t-bold">需輸入八碼員編才能使用遠距理財諮詢功能</div>
+                <div class="c-calcLocker__desc" style="display: grid;justify-content: center;">
+                    <div class="l-form__input">
+                        <input id="input-employee" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入八碼員編">
+                    </div>
+                </div>
+                <div class="c-calcLocker__actions">
+                    <div class="c-calcLocker__btn"><a class="o-btn o-btn--primary o-btn--lg" id="send-employee">送出</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+}
+
 <div class="c-section" data-consultlist>
     <div class="c-section__content">
         <div class="c-tab c-tab--icon" data-tab="true" data-docking="false">
@@ -970,6 +992,57 @@
                 window.loading('hide');
             });
         }
+
+        function checkEmployee(){
+            window.loading('show');
+
+            var code = $('#input-employee').val();
+
+            var token = $('input[name="__RequestVerificationToken"]').val();
+
+            $.ajax({
+                url: '@ClientRoute.GenerateUrl(this, "Consult", "CheckEmployee")',
+                type: 'POST',
+                data: {code: code, __RequestVerificationToken : token }
+            }).done(function (data, textStatus, jqXHR) {
+                $.magnificPopup.close();
+                if (data.Success) {
+                    $('#consultlistLocker').removeClass('c-section--locker');
+                    $('#consultlistLocker').addClass('u-hidden');
+                }
+                else {
+                    if (data.Block) {
+                        window.VerifyLoginRedirctToHome(data.Success);
+                        return;
+                    }
+
+                    $('#message').text(data.Message);
+                    $.magnificPopup.open({
+                        items: {
+                            src: '#popupFail'
+                        },
+                        closeOnBgClick: false,
+                        callbacks: {
+                            afterClose: function () {
+                            }
+                        }
+                    });
+                }
+
+                if (data.ErrorMessage) {
+                    console.log(data.ErrorMessage);
+                }
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+            }).always(function () {
+                window.loading('hide');
+            });
+        }
+
+        $('#send-employee').on('click', function (e) {
+            e.preventDefault();
+
+            checkEmployee();
+        });
 
         moment.locale('zh-tw', {
             weekdaysMin: dayNamesZh,
