update:到價通知加入設定價格&日期&&調整欄位名稱&&取消關注同時刪除通知

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_FundList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_FundList.cshtml
@@ -208,14 +208,24 @@
                     </td>
                     <td class="c-cardTable__body c-cardTable__body--line" data-card-table-width="1/1">
                         <div class="c-cardTable__title" data-length="5">淨值/<br>漲跌幅通知</div>
-                                    <div class="c-cardTable__content" data-infostatus="<% if (Info != null && Info.ReachValueOpen || Info != null && Info.QuoteChangeOpen){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
-                            <% if (Info  == null ) { %>
+                         <div class="c-cardTable__content" data-infostatus="<% if (Info != null && Info.ReachValueOpen || Info != null && Info.QuoteChangeOpen){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
+                          <% if (Info  == null　|| (!Info.ReachValueOpen && !Info.QuoteChangeOpen) ) { %>
                             <div class="t-tip--lt">點鈴鐺設定到價通知</div>
                             <% } else {%>
-                            <% if (Info.ReachValue  != null ) { %>
-                            <div class="<% if ( (Info.ReachValue >= Info.PriceValue &&  Info.ReachValue <= NetAssetValue) || (Info.ReachValue <= Info.PriceValue &&  Info.ReachValue >= NetAssetValue)){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></div>
+                            <% if (Info.ReachValueOpen && Info.ReachValue  != null ) { %>
+                            <div class="l-straight@lt">
+                                     <div class="l-straight__item">
+                                          <span class="<% if ( (Info.ReachValue >= Info.PriceValue &&  Info.ReachValue <= NetAssetValue) || (Info.ReachValue <= Info.PriceValue &&  Info.ReachValue >= NetAssetValue)){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></span>
+                                    </div>
+                                        <div class="l-straight__item">
+                                                  <span class="t-date" data-after="設定淨值 <%= Info.PriceValue %>"></span>
+                                        </div>
+                                            <div class="l-straight__item">
+                                                      <span class="t-date" data-after="設定日期 <%= Info.ReachValueSetDate %>"></span>
+                                            </div>
+                            </div>
                             <% } %>
-                            <% if (Info.RisePercent  != null  || Info.FallPercent) { %>
+                               <% if (Info.QuoteChangeOpen && (Info.RisePercent  != null  || Info.FallPercent != null )) { %>
                             <div class="l-straight@lt">
                                 <% if (Info.RisePercent  != null ) { %>
                                 <div class="l-straight__item">
@@ -227,6 +237,14 @@
                                     <span class="<% if (NetAssetValue <= Info.FallValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="跌幅 <%= Info.FallPercent %>%"></span>
                                 </div>
                                 <% } %>
+                                <% if (Info.RisePercent  != null　|| Info.FallPercent  != null ) { %>
+                                          <div class="l-straight__item">
+                                                <span class="t-date" data-after="設定淨值 <%= Info.RiseFallPriceValue %>"></span>
+                                        </div>
+                                             <div class="l-straight__item">
+                                                      <span class="t-date" data-after="設定日期 <%= Info.QuoteChangeSetDate %>"></span>
+                                            </div>
+                                   <% } %>
                             </div>
                             <% } %>
                             <% } %>
