--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml
@@ -89,7 +89,7 @@
                         </th>
                         <th >
                             <div class="c-table__title">
-                                <span>淨值/<br>漲跌幅通知</span>
+                                <span>收盤價/<br>漲跌幅通知</span>
                             </div>
                         </th>
                         <th>
@@ -182,15 +182,25 @@
                             </div>
                         </td>
                         <td class="c-cardTable__body c-cardTable__body--line" data-card-table-width="1/1" >
-                            <div class="c-cardTable__title" data-length="5">淨值/<br>漲跌幅通知</div>
+                            <div class="c-cardTable__title" data-length="5">收盤價/<br>漲跌幅通知</div>
                             <div class="c-cardTable__content" data-infostatus="<% if (Info != null && Info.ReachValueOpen || Info != null && Info.QuoteChangeOpen){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
-                                <% if (Info  == null ) { %>
+                               <% if (Info  == null　|| (!Info.ReachValueOpen && !Info.QuoteChangeOpen) ) { %>
                                 <div class="t-tip--lt">點鈴鐺設定到價通知</div>
                                 <% } else {%>
-                                <% if (Info.ReachValue  != null ) { %>
-                                <div class="<% if ( (Info.ReachValue >= Info.PriceValue &&  Info.ReachValue <= ClosingPrice) || (Info.ReachValue <= Info.PriceValue &&  Info.ReachValue >= ClosingPrice)){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></div>
+                                  <% if (Info.ReachValueOpen && Info.ReachValue  != null ) { %>
+                                      <div class="l-straight@lt">
+                                         <div class="l-straight__item">
+                                                      <span class="<% if ( (Info.ReachValue >= Info.PriceValue &&  Info.ReachValue <= ClosingPrice) || (Info.ReachValue <= Info.PriceValue &&  Info.ReachValue >= ClosingPrice)){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="收盤價 <%= Info.ReachValue %>"></span>
+                                        </div>
+                                            <div class="l-straight__item">
+                                                      <span class="t-date" data-after="設定收盤價 <%= Info.PriceValue %>"></span>
+                                       </div>
+                                        <div class="l-straight__item">
+                                                  <span class="t-date" data-after="設定日期 <%= Info.ReachValueSetDate %>"></span>
+                                        </div>
+                                </div>
                                 <% } %>
-                                <% if (Info.RisePercent  != null  || Info.FallPercent) { %>
+                                <% if (Info.QuoteChangeOpen && (Info.RisePercent  != null  || Info.FallPercent != null )) { %>
                                 <div class="l-straight@lt">
                                     <% if (Info.RisePercent  != null ) { %>
                                     <div class="l-straight__item">
@@ -202,6 +212,14 @@
                                         <span class="<% if (ClosingPrice<= Info.FallValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="跌幅 <%= Info.FallPercent %>%"></span>
                                     </div>
                                     <% } %>
+                                    <% if (Info.RisePercent  != null　|| Info.FallPercent  != null ) { %>
+                                      <div class="l-straight__item">
+                                           <span class="t-date" data-after="設定收盤價 <%= Info.RiseFallPriceValue %>"></span>
+                                      </div>
+                                      <div class="l-straight__item">
+                                                  <span class="t-date" data-after="設定日期 <%= Info.QuoteChangeSetDate %>"></span>
+                                        </div>
+                               <% } %>
                                 </div>
                                 <% } %>
                                 <% } %>
