不安全的第三方鏈結 (target="_blank")

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -72,12 +72,12 @@
 
                                             }
                                             <b>@riskName</b>
-                                            <a href="@WebKycLink" target="_blank" class="o-link t4 u-hidden" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4 u-hidden" id="GoKYC">進行風險屬性評估</a>
 
                                         }
                                         else
                                         {
-                                            <a href="@WebKycLink" target="_blank" class="o-link t4" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4" id="GoKYC">進行風險屬性評估</a>
                                         }
                                     </div>
                                 </div>
