--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -523,7 +523,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="@WebKycLink" target="_blank" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
+                                                        <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -709,7 +709,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="@WebKycLink" target="_blank" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
+                                                        <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -895,7 +895,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="@WebKycLink" target="_blank" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
+                                                        <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1081,7 +1081,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="@WebKycLink" target="_blank" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
+                                                        <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1269,7 +1269,7 @@
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
                                                     <div class="l-riskCard__actions">
-                                                        <a href="@WebKycLink" target="_blank" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
+                                                        <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-btn o-btn--secondary o-btn--thin o-btn--auto GoKYC">進行風險屬性評估</a>
                                                     </div>
                                                 </div>
                                             </div>
