--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VideoCarousel/VideoCarousel.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VideoCarousel/VideoCarousel.cshtml
@@ -48,7 +48,7 @@
                                                     }
                                                     else
                                                     {
-                                                        <a class="c-gridview__media @icon" target="_blank">
+                                                        <a class="c-gridview__media @icon">
                                                             <img src="@item.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                         </a>
                                                     }
@@ -85,7 +85,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <a class="c-gridview__media @icon1" target="_blank">
+                                                            <a class="c-gridview__media @icon1">
                                                                 <img src="@item1.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                             </a>
                                                         }
