--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -75,7 +75,7 @@
             <b>您的網路瀏覽器已過舊。</b>
             <span>更新您的瀏覽器以獲得更佳的安全性、速度以及在此網站的最佳體驗。</span>
             <span class="c-browserUpgrade__actions">
-                <a class="c-browserUpgrade__update" href="https://browser-update.org/zh_TW/update-browser.html" target="_blank" title="更新瀏覽器" rel="noopener noreferrer">更新瀏覽器</a>
+                <a class="c-browserUpgrade__update" href="https://browser-update.org/zh_TW/update-browser.html" target="_blank" rel="noopener noreferrer" title="更新瀏覽器" rel="noopener noreferrer">更新瀏覽器</a>
             </span>
         </div>
     <![endif]-->
@@ -98,7 +98,7 @@
             </div>
             <div class="l-header__logo">
                 <div class="o-ci">
-                    <a href="https://www.firstbank.com.tw/" target="_blank"><img src="~/themes/images/layout/logo.svg" alt="第一銀行logo" class="o-ci__logo"></a>
+                    <a href="https://www.firstbank.com.tw/" target="_blank" rel="noopener noreferrer"><img src="~/themes/images/layout/logo.svg" alt="第一銀行logo" class="o-ci__logo"></a>
                     <a href="/" class="o-ci__site">第e理財網</a>
                 </div>
             </div>
