--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -124,7 +124,7 @@
                                             <div class="c-cardTable__content">
                                                 <div class="l-target">
                                                     <div class="l-target__name">
-                                                        <a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.FundName</a>
+                                                        <a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank" rel="noopener noreferrer">@item.ProductCode @item.FundName</a>
                                                     </div>
                                                     @if (item.Tags != null)
                                                     {
