--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -270,7 +270,7 @@
                                         <label class="o-checkbox">
                                             <input class="o-checkbox__input" type="checkbox" id="picheck">
                                             <div class="o-checkbox__text">
-                                                為保護您的權益，請詳細閱讀<a href="@Model.PersonalInformationLink" class="o-link" target="_blank">@Model.PersonalInformationText</a>，當表單送出時，即視同您已充分了解與同意。
+                                                為保護您的權益，請詳細閱讀<a href="@Model.PersonalInformationLink" class="o-link" target="_blank" rel="noopener noreferrer">@Model.PersonalInformationText</a>，當表單送出時，即視同您已充分了解與同意。
                                             </div>
                                         </label>
                                     </div>
