update: 加入專業投資人&高資產判斷 update:會員資訊加入已逾期判斷 update:專屬推薦已逾期推薦RR1

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -69,11 +69,14 @@
                                                 case "3":
                                                     riskName = "積極型";
                                                     break;
+                                                case "4":
+                                                    riskName = "已逾期";
+                                                    break;
 
                                             }
                                             <b>@riskName</b>
-                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4 u-hidden" id="GoKYC">進行風險屬性評估</a>
-
+                                            <br>
+                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4 @(member.Risk == "4" ? string.Empty : "u-hidden")" id="GoKYC">進行風險屬性評估</a>
                                         }
                                         else
                                         {
