--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ExclusiveRecommendation/ExclusiveRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ExclusiveRecommendation/ExclusiveRecommendation.cshtml
@@ -345,5 +345,6 @@ else
     <script>
         let panelId_exclusive = $('[data-exclusive]').parent().attr('data-tab-panel-id');
         $('.c-tab__navs').find('[data-tab-target=' + panelId_exclusive + ']').parent().remove();
+        $('.c-tab__dropdown').find('[data-tab-target=' + panelId_exclusive + ']').remove();
     </script>
 }
