--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -161,7 +161,7 @@
                                                 <div class="c-filterForm__value">
                                                     <div class="c-sliderBar">
                                                         <div class="c-sliderBar__main" data-slider-bar="interestRate"></div>
-                                                        <input type="text" class="c-sliderBar__value" data-slider-val="interestRate" data-slider-suffix="百萬" data-filter-bar>
+                                                        <input type="text" class="c-sliderBar__value" data-slider-val="interestRate" data-slider-suffix="%" data-filter-bar>
                                                     </div>
                                                 </div>
                                             </div>
