--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -7,8 +7,9 @@
     @* 第三方登入隱藏tab *@
     <div class="c-section" data-consultlist></div>
     <script>
-        let panelId = $('[data-consultlist]').parent().attr('data-tab-panel-id');
-        $('.c-tab__navs').find('[data-tab-target=' + panelId + ']').parent().remove();
+        let panelId_consultlist = $('[data-consultlist]').parent().attr('data-tab-panel-id');
+        $('.c-tab__navs').find('[data-tab-target=' + panelId_consultlist + ']').parent().remove();
+        $('.c-tab__dropdown').find('[data-tab-target=' + panelId_consultlist + ']').remove();
     </script>
 
     return;
