--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -23,7 +23,7 @@
                 <div class="c-calcLocker__icon">
                     <img src="~/themes/images/icons/others/lock.svg" alt="">
                 </div>
-                <div class="c-calcLocker__desc t2 t-bold">需輸入八碼員編才能使用遠距理財諮詢功能</div>
+                <div class="c-calcLocker__desc t2 t-bold">請輸入8碼員編，以使用「遠距理財諮詢」功能。</div>
                 <div class="c-calcLocker__desc" style="display: grid;justify-content: center;">
                     <div class="l-form__input">
                         <input id="input-employee" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入八碼員編">
